--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.16",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.4",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
